--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.11'
+    ext.dokka_version = '0.9.17'
     repositories {
         google()
         jcenter()
+        maven {
+            url  "https://dl.bintray.com/kotlin/dokka"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:${dokka_version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +25,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url  "https://dl.bintray.com/kotlin/dokka"
+        }
     }
 }
 
